--- a/mq-book-broker/src/main/resources/application.yml
+++ b/mq-book-broker/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   application:
     name: "@project.name@"
 
+
   jpa:
     hibernate:
       ddl-auto: none
@@ -10,12 +11,12 @@ spring:
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/book_database
+    url: jdbc:postgresql://localhost:5432/mq_book_database
     username: root
     password: secret
 
   flyway:
-    url: jdbc:postgresql://localhost:5432/book_database
+    url: jdbc:postgresql://localhost:5432/mq_book_database
     schemas: public
     user: root
     password: secret
@@ -24,3 +25,6 @@ spring:
   rabbitmq:
     username: user
     password: secret
+
+server:
+  port: 8090
