--- a/mq-book-broker/src/main/resources/application.yml
+++ b/mq-book-broker/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
     locations: classpath:/db/migration
 
   rabbitmq:
-    username: user
+    username: root
     password: secret
 
 server:
